--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "zwave2matter": "./dist/index.js"
   },
   "dependencies": {
+    "@project-chip/matter-node.js": "~0.7.4",
+    "@project-chip/matter.js": "~0.7.4",
     "commander": "~12.0.0",
     "ws": "~8.16.0"
   },
