--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@project-chip/matter-node.js": "~0.7.4",
     "commander": "~12.0.0",
+    "uuid": "~9.0.1",
     "ws": "~8.16.0"
   },
   "devDependencies": {
