--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "repository": "git@github.com:andyalm/zwave2matter",
   "scripts": {
-    "build": "tsc"
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/zwave2matter.js",
+    "dockerbuild": "docker build -t zwave2matter ."
   },
   "bin": {
     "zwave2matter": "./dist/index.js"
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "~18.15.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "esbuild": "~0.20.0"
   }
 }
