--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -67,8 +67,8 @@ jobs:
       with:
         images: ${{ env.REGISTRY_IMAGE }}
         tags: |
-          type=edge,branch=main
           type=ref,event=branch
+          type=raw,value=latest,enable={{is_default_branch}}
     - name: Login to ghcr.io
       uses: docker/login-action@v3
       with:
