--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "repository": "git@github.com:andyalm/zwave2matter",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/zwave2matter.js",
-    "dockerbuild": "docker build -t zwave2matter ."
+    "dockerbuild": "docker build -t zwave2matter .",
+    "prettier": "npx prettier --check .",
+    "prettier:fix": "npx prettier --write ."
   },
   "bin": {
     "zwave2matter": "./dist/index.js"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/node": "~18.15.3",
     "typescript": "~5.3.3",
-    "esbuild": "~0.20.0"
+    "esbuild": "~0.20.0",
+    "prettier": "~3.2.5"
   }
 }
